--- a/public/admin.html
+++ b/public/admin.html
@@ -730,8 +730,8 @@ let generalDatas;
 
      const content = {
                   altitude:"Inconnue",
-                  latitude:lon,
-                 longitude:lat,
+                  latitude:lat,
+                 longitude:lon,
                  id:nowPanel
               };
               console.log(content);
