--- a/public/admin.html
+++ b/public/admin.html
@@ -102,7 +102,11 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                      </div>
+                        <label class="switch">
+                          <input type="checkbox">
+                          <span class="slider"></span>
+                        </label>
+                    </div>
           
           <div id="panel_F">
             <div id="panel_F_circle" class="circleC">
@@ -1319,6 +1323,30 @@ let what;
       }
     </script>
     <style>
+      .switch {
+        position:relative;
+        width:90%;
+        height:4vh;
+      }
+      .switch input {
+        opacity:0;
+        width:0;
+        height:0;
+      }
+      .slider {
+        position:absolute;
+        cursor:pointer;
+        top:0; left:0; right:0; bottom:0;
+        background-color: #ccc;
+        transition:.3s;
+        border-radius:34px;
+      }
+      input:checked + .slider {
+        background-color: #4caf50;
+      }
+      input:checked + .slider::before {
+        transform: translateX(24px);
+      }
       #toast-container {
         position:fixed;
         bottom:2vh;
