--- a/public/admin.html
+++ b/public/admin.html
@@ -102,10 +102,7 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                        <label class="switch">
-                          <input type="checkbox">
-                          <span class="slider"></span>
-                        </label>
+                        <input type="checkbox" id="bioounon">
                     </div>
           
           <div id="panel_F">
@@ -1323,30 +1320,6 @@ let what;
       }
     </script>
     <style>
-      .switch {
-        position:relative;
-        width:90%;
-        height:4vh;
-      }
-      .switch input {
-        opacity:0;
-        width:0;
-        height:0;
-      }
-      .slider {
-        position:absolute;
-        cursor:pointer;
-        top:0; left:0; right:0; bottom:0;
-        background-color: #ccc;
-        transition:.3s;
-        border-radius:34px;
-      }
-      input:checked + .slider {
-        background-color: #4caf50;
-      }
-      input:checked + .slider::before {
-        transform: translateX(24px);
-      }
       #toast-container {
         position:fixed;
         bottom:2vh;
