--- a/public/admin.html
+++ b/public/admin.html
@@ -102,7 +102,11 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                        <input type="checkbox" id="bioounon">
+                            <div class="display:flex; flex-direction:column; justify-content:space-around;">
+                              <p>BIO</p>
+                              <input type="checkbox" id="bioounon">
+                              <p>Oui</p>
+                            </div>
                     </div>
           
           <div id="panel_F">
