--- a/public/admin.html
+++ b/public/admin.html
@@ -102,7 +102,7 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                            <div style="display:flex; flex-direction:column; justify-content:space-around;">
+                            <div style="display:flex; flex-direction:row; justify-content:space-around;">
                               <p>BIO</p>
                               <input type="checkbox" id="bioounon">
                               <p id="bio_temoin">Oui</p>
