--- a/public/admin.html
+++ b/public/admin.html
@@ -102,12 +102,23 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                            <div style="display:flex; flex-direction:row; justify-content:space-around;">
+                            <div id="bio_block" style="display:flex; flex-direction:row; justify-content:space-around;">
                               <p>BIO</p>
                               <input type="checkbox" id="bioounon">
                               <p id="bio_temoin">Oui</p>
                             </div>
                     </div>
+
+          <style>
+             #bio_block {
+                display: none;
+              }
+            
+              /* afficher quand on survole #cereale_input */
+              #cereale_input:hover #bio_block {
+                display: flex;
+              }
+          </style>
           
           <div id="panel_F">
             <div id="panel_F_circle" class="circleC">
