--- a/public/admin.html
+++ b/public/admin.html
@@ -105,7 +105,7 @@
                             <div id="bio_block" style="display:flex; flex-direction:row; justify-content:space-around;">
                               <p>BIO</p>
                               <input type="checkbox" id="bioounon">
-                              <p id="bio_temoin">Oui</p>
+                              <p id="bio_temoin">Non</p>
                             </div>
                     </div>
 
