--- a/public/admin.html
+++ b/public/admin.html
@@ -2019,7 +2019,7 @@ document.getElementById('editer_a').onclick = async () => {
         // nowPanel
         document.getElementById('adminBtn').click();
         document.getElementById('btnBennes').click();
-        document.getElementById('text_searcherBenne').value = `B${nowPanel}A${benne.num}`;
+        document.getElementById('text_searcherBenne').value = `B${nowPanel}A${nowPanel}`;
         document.getElementById('filtrerBennes').click();
       }
     </script>
