--- a/public/admin.html
+++ b/public/admin.html
@@ -628,6 +628,9 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
                         if (mes.what === "benne") {
                           reloadBenne();
                         }
+                               if (mes.what === "compte") {
+                          start();
+                        }
                       }
         });
       }
