--- a/public/driver.html
+++ b/public/driver.html
@@ -320,6 +320,9 @@ const offset = -((new Date().getTimezoneOffset()) / 60);
                             findBenne(onlive);
                           }
                         }
+             if (mes.what === "compte") {
+                          start();
+                        }
                       }
       });
       }
