--- a/public/admin.html
+++ b/public/admin.html
@@ -102,7 +102,7 @@
 
                     <div id="cereale_input">
                         <input id="cereale_input_search" type="text" placeholder="Entrez un code ou nom de céréale...">
-                            <div id="bio_block" style="flex-direction:row; justify-content:space-around; height:2vh;">
+                            <div id="bio_block" style="align_items:center; flex-direction:row; justify-content:space-around; height:5vh;">
                               <p>BIO</p>
                               <input type="checkbox" id="bioounon">
                               <p id="bio_temoin">Non</p>
