--- a/public/admin.html
+++ b/public/admin.html
@@ -124,6 +124,7 @@
               left:90%;
               height:20%;
               width:10%;
+              z-index:2500;
             }
             #legende:hover {
               opacity:1;
