--- a/public/admin.html
+++ b/public/admin.html
@@ -9,8 +9,8 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   </head>
   <body>
-    <div id="legende" style="flex-direction:column;">
-      <div style="display:flex; align-items:center; flex-direction:row;">
+    <div id="legende" style="flex-direction:column; justify-content:space-around;">
+      <div style="display:flex; align-items:center; justify-content:space-around; flex-direction:row;">
         <span class="dot" style=" background-color: yellow;"></span>
         <i>Posée</i>
       </div>
@@ -130,8 +130,8 @@
               opacity:1;
             }
             .dot {
-              width: 10%;                /* Taille du point */
-              height: 10%;
+              width: 100%;                /* Taille du point */
+              aspect-ratio: 1 / 1;
               border-radius: 50%; 
             }
              #bio_block {
