--- a/public/admin.html
+++ b/public/admin.html
@@ -14,6 +14,14 @@
         <span class="dot" style=" background-color: yellow;"></span>
         <i>Posée</i>
       </div>
+      <div style="display:flex; align-items:center; justify-content:space-around; flex-direction:row;">
+        <span class="dot" style=" background-color: red;"></span>
+        <i>Prête</i>
+      </div>
+      <div style="display:flex; align-items:center; justify-content:space-around; flex-direction:row;">
+        <span class="dot" style=" background-color: blue;"></span>
+        <i>Dépôt</i>
+      </div>
     </div>
     <div id="toast-container"></div>
     <div id="lightbox">
@@ -130,7 +138,7 @@
               opacity:1;
             }
             .dot {
-              width: 30%;                /* Taille du point */
+              height: 30%;                /* Taille du point */
               aspect-ratio: 1 / 1;
               border-radius: 50%; 
             }
