--- a/public/admin.html
+++ b/public/admin.html
@@ -133,12 +133,13 @@
               height:20%;
               width:10%;
               z-index:2500;
+              background-color:white;
             }
             #legende:hover {
               opacity:1;
             }
             .dot {
-              height: 30%;                /* Taille du point */
+              height: 100%;                /* Taille du point */
               aspect-ratio: 1 / 1;
               border-radius: 50%; 
             }
