--- a/public/admin.html
+++ b/public/admin.html
@@ -131,7 +131,7 @@
               display:flex;
               position:absolute;
               top:40%;
-              left:90%;
+              left:100%;
               height:20%;
               width:10%;
               z-index:2500;
@@ -139,6 +139,7 @@
             }
             #legende:hover {
               opacity:1;
+              transform: translateX(-10%);
             }
             .dot {
               height: 100%;                /* Taille du point */
