--- a/public/admin.html
+++ b/public/admin.html
@@ -764,11 +764,14 @@ let generalDatas;
     const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '© OSM' });
     const satellite = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', { attribution: '© Esri' });
     const topo = L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', { attribution: 'Map data: © OpenStreetMap contributors, SRTM | Map style: © OpenTopoMap' });
+      // https://tile.thunderforest.com/transport/{z}/{x}/{y}.png?apikey=2ad4ef15e8df44f784baefc78de0e6c7
+    const transport = L.tileLayer('https://tile.thunderforest.com/transport/{z}/{x}/{y}.png?apikey=2ad4ef15e8df44f784baefc78de0e6c7', { attribution: 'Map data: © OpenStreetMap contributors | Map style: © Thunderforest' });
     
-    const baseMaps = {
+      const baseMaps = {
   "OpenStreetMap": osm,
   "Satellite": satellite,
-      "Topographie":topo
+      "Topographie":topo,
+      "Transport":transport
   };
     
     const map = L.map('mapA').setView([45.72191877191547, 4.227417998761897], 15);
