--- a/public/historique.html
+++ b/public/historique.html
@@ -104,6 +104,9 @@
         if (input == "1") {
           return "changé";
         }
+        if (input == "2") {
+          return "déplacé";
+        }
       }
     </script>
     <style>
