--- a/public/historique.html
+++ b/public/historique.html
@@ -101,7 +101,31 @@ const tabler = document.getElementById("tablehisto");
           line.append(a);
           document.getElementById('histocontainer').append(line);
 
-          tabler.innerHTML = "<thead><tr><th>Nom</th><th>Âge</th><th>Ville</th></tr></thead>";
+          tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr></thead>";
+          const tr = document.createElement('tr');
+          tabler.append(tr);
+          const td1 = document.createElement('td');
+          tr.append(td1);
+          td1.textContent = formatTimestamp(item.when);
+          const td2 = document.createElement('td');
+          tr.append(td2);
+          td2.textContent = item.who;
+
+          const td3 = document.createElement('td');
+          tr.append(td3);
+          td3.textContent = await convertToWords(item.content);
+          const td4 = document.createElement('td');
+          tr.append(td4);
+          td4.textContent = item.what;
+          const td5 = document.createElement('td');
+          tr.append(td5);
+          td5.textContent = item.table;
+          const td6 = document.createElement('td');
+          tr.append(td6);
+          td6.textContent = item.type;
+          const td7 = document.createElement('td');
+          tr.append(td7);
+          td7.textContent = item.value;
         }
       }
 
