--- a/public/historique.html
+++ b/public/historique.html
@@ -11,7 +11,7 @@
   <body>
      <div id="toast-container"></div>
       <div id="histocontainer" w3-center">
-        <table id="tablehist"></table>
+        <table id="tablehisto"></table>
         
       </div>
     <script>
