--- a/public/historique.html
+++ b/public/historique.html
@@ -11,7 +11,7 @@
   <body>
      <div id="toast-container"></div>
       <div id="histocontainer" w3-center">
-        <table id="tablehisto"></table>
+        <table class="w3-center" style="border:1px; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
         
       </div>
     <script>
