--- a/public/historique.html
+++ b/public/historique.html
@@ -10,7 +10,7 @@
   </head>
   <body>
      <div id="toast-container"></div>
-     <table class="w3-center" style="width:100%; border:1px; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
+     <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
     <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
       console.log(offset);
