--- a/public/historique.html
+++ b/public/historique.html
@@ -85,7 +85,7 @@
 const tabler = document.getElementById("tablehisto");
       
       async function getHistorique(type, id) {
-        tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr><tr><th><input type='date' id='dateinput' placeholder='DATE'><input type='time' id='timeinput' placeholder='HEURE'></th><th><input type='text' id='whoinput' placeholder='ACTIONNEUR'></th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr></thead>";
+        tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr><tr><th><input type='date' id='dateinput' placeholder='DATE'><input type='time' id='timeinput' placeholder='HEURE'></th><th><input type='text' id='whoinput' placeholder='ACTIONNEUR'></th><th><input type='text' id='contentinput' placeholder='ACTION'></th><th>Élément</th><th><input type='text' id='typeinput' placeholder='TYPE'></th><th><input type='text' id='carainput' placeholder='CARACTÈRE'></th><th><input type='text' id='affecinput' placeholder='AFFECTATION'></th></tr></thead>";
         const datas = await fetcher('gethistorique', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
         for (const item of datas) {
           // const line = document.createElement('div');
