--- a/public/historique.html
+++ b/public/historique.html
@@ -193,6 +193,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
       }
       input {
         width: 100%;
+        height:2vh;
         padding: 0.75rem;
         margin-bottom: 1rem;
         border: 1px solid #ccc;
