--- a/public/historique.html
+++ b/public/historique.html
@@ -85,7 +85,7 @@
 const tabler = document.getElementById("tablehisto");
       
       async function getHistorique(type, id) {
-        tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr><tr><th style='display:flex; flex-direction:row; justify-content:space-around;'><input type='date' id='dateinput' placeholder='DATE'><input type='time' id='timeinput' placeholder='HEURE'></th><th><input type='text' id='whoinput' placeholder='ACTIONNEUR'></th><th><input type='text' id='contentinput' placeholder='ACTION'></th><th><input type='text' id='iteminput' placeholder='ÉLÉMENT'></th><th><input type='text' id='typeinput' placeholder='TYPE'></th><th><input type='text' id='carainput' placeholder='CARACTÈRE'></th><th><input type='text' id='affecinput' placeholder='AFFECTATION'></th></tr></thead>";
+        tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr><tr><th style='display:flex; flex-direction:row; justify-content:space-around;'><input type='datetime' id='dateinput' placeholder='DÉBUT'><input type='datetime' id='timeinput' placeholder='FIN'></th><th><input type='text' id='whoinput' placeholder='ACTIONNEUR'></th><th><input type='text' id='contentinput' placeholder='ACTION'></th><th><input type='text' id='iteminput' placeholder='ÉLÉMENT'></th><th><input type='text' id='typeinput' placeholder='TYPE'></th><th><input type='text' id='carainput' placeholder='CARACTÈRE'></th><th><input type='text' id='affecinput' placeholder='AFFECTATION'></th></tr></thead>";
         const datas = await fetcher('gethistorique', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
         for (const item of datas) {
           // const line = document.createElement('div');
@@ -167,8 +167,24 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
   }
   return formatted;
 }
+const a_plug = document.getElementById('dateinput'); // Date → Debut
+const b_plug = document.getElementById('timeinput'); // Heure → Fin
+      let debounceTimer;
+      async function resetTable () {
+        clearTimeout(debounceTime);
+        debounceTime = setTimer(() => {
+        console.log(a_plug.value);
+        console.log(b_plug.value);
+        }, 1000);
+      }
+      a_plug.addEventListener('click',resetTable);
+      b_plug.addEventListener('click', resetTable);
     </script>
     <style>
+      #tablehisto th, 
+#tablehisto td {
+  border: 1px solid black;
+}
       body {
           margin: 0;
           padding:1rem;
