--- a/public/historique.html
+++ b/public/historique.html
@@ -84,9 +84,9 @@
 
 const tabler = document.getElementById("tablehisto");
       
-      async function getHistorique(type, id) {
+      async function getHistorique(type, id, query) {
         tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Action</th><th>Élément</th><th>Type</th><th>Caractère</th><th>Affectation</th></tr><tr><th style='display:flex; flex-direction:row; justify-content:space-around;'><input type='datetime' id='dateinput' placeholder='DÉBUT'><input type='datetime' id='timeinput' placeholder='FIN'></th><th><input type='text' id='whoinput' placeholder='ACTIONNEUR'></th><th><input type='text' id='contentinput' placeholder='ACTION'></th><th><input type='text' id='iteminput' placeholder='ÉLÉMENT'></th><th><input type='text' id='typeinput' placeholder='TYPE'></th><th><input type='text' id='carainput' placeholder='CARACTÈRE'></th><th><input type='text' id='affecinput' placeholder='AFFECTATION'></th></tr></thead>";
-        const datas = await fetcher('gethistorique', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
+        const datas = await fetcher('gethistorique', {id:id, type:type, query:query}, 'POST', sessionStorage.getItem('session_id'));
         for (const item of datas) {
           // const line = document.createElement('div');
          // line.style.width = '100%';
@@ -175,6 +175,11 @@ const b_plug = document.getElementById('timeinput'); // Heure → Fin
         debounceTime = setTimer(() => {
         console.log(a_plug.value);
         console.log(b_plug.value);
+        const query = {
+          a:a_plug.value,
+          b:b_plug.value
+        };
+        getHistorique(type, id, query);
         }, 1000);
       }
       a_plug.addEventListener('click',resetTable);
