--- a/public/historique.html
+++ b/public/historique.html
@@ -90,7 +90,7 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
       const tbody = document.createElement('tbody');
       tabler.append(tbody);
       async function setConstants () {
-      
+      tbody.innerHTML = "";
       const aplug = document.getElementById('dateinput');
       const bplug = document.getElementById('timeinput');
       aplug.addEventListener('input', resetTable);
