--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -12,7 +12,7 @@
      <div id="toast-container"></div>
       <div id="ab" class="form-container w3-center">
         <p id="data_known" class="w3-center"></p>
-        <img id="img_known" class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+        <img id="img_known" class="w3-center" src="https://cdn.pixabay.com/animation/2023/08/11/21/18/21-18-05-265_512.gif" alt="Loading">
         <br>
         <button hidden id="from_internet">Utiliser une image d'internet</button>
         <button id="from_computer">Importer une image</button>
