--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -21,7 +21,7 @@
       </div>
     <div hidden id="cd" class="form-container w3-center">
         <p class="w3-center">Confirmez la modification</p>
-        <img id="img_preview" class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
+        <img id="img_preview" class="w3-center" src="https://cdn.pixabay.com/animation/2023/08/11/21/18/21-18-05-265_512.gif" alt="Logo Euréa">
         <br>
         <button id="confirm_preview">Confirmer</button>
         <button onclick="document.getElementById('ab').hidden = false; document.getElementById('cd').hidden = true;">Annuler</button>
