--- a/public/historique.html
+++ b/public/historique.html
@@ -201,6 +201,10 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
 #tablehisto td {
   border: 1px solid black;
 }
+      #tbody {
+        overflow-y:auto;
+        height:75%;
+      }
       body {
           margin: 0;
           padding:1rem;
