--- a/public/historique.html
+++ b/public/historique.html
@@ -102,9 +102,11 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
         debounceTimer = setTimeout(() => {
         console.log(aplug.value);
         console.log(bplug.value);
+          // date.setHours(date.getHours() - offset);
         const query = {
           a:aplug.value,
-          b:bplug.value
+          b:bplug.value,
+          offset:offset
         };
         getHistorique(alltype, allid, query);
         }, 1000);
