--- a/public/historique.html
+++ b/public/historique.html
@@ -94,8 +94,12 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
       tbody.innerHTML = "";
       const aplug = document.getElementById('dateinput');
       const bplug = document.getElementById('timeinput');
+      const cplug = document.getElementById('dateinput');
+      const dplug = document.getElementById('timeinput');
       aplug.addEventListener('input', resetTable);
       bplug.addEventListener('input', resetTable);
+      cplug.addEventListener('input', resetTable);
+      dplug.addEventListener('input', resetTable);
      
       async function resetTable () {
         clearTimeout(debounceTimer);
@@ -106,6 +110,8 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
         const query = {
           a:aplug.value,
           b:bplug.value,
+          c:cplug.value,
+          d:dplug.value,
           offset:offset
         };
         getHistorique(alltype, allid, query);
