--- a/public/historique.html
+++ b/public/historique.html
@@ -94,8 +94,8 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
       tbody.innerHTML = "";
       const aplug = document.getElementById('dateinput');
       const bplug = document.getElementById('timeinput');
-      const cplug = document.getElementById('dateinput');
-      const dplug = document.getElementById('timeinput');
+      const cplug = document.getElementById('whoinput');
+      const dplug = document.getElementById('contentinput');
       aplug.addEventListener('input', resetTable);
       bplug.addEventListener('input', resetTable);
       cplug.addEventListener('input', resetTable);
