--- a/public/historique.html
+++ b/public/historique.html
@@ -209,16 +209,17 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
 #tablehisto td {
   border: 1px solid black;
 }
-      #tbody {
+      tbody {
         overflow-y:auto;
         height:75%;
+        display:block;
       }
       body {
           margin: 0;
           padding:1rem;
           height: 100vh;
           width: 100vw;
-          display:flex;
+          display:block;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
           background: linear-gradient(135deg, blue, red);
