--- a/public/historique.html
+++ b/public/historique.html
@@ -209,11 +209,11 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
 #tablehisto td {
   border: 1px solid black;
 }
-      tbody {
+      /* tbody {
         overflow-y:auto;
         height:75%;
         display:block;
-      }
+      } */
       body {
           margin: 0;
           padding:1rem;
