--- a/public/historique.html
+++ b/public/historique.html
@@ -10,8 +10,10 @@
   </head>
   <body>
      <div id="toast-container"></div>
+    <div style="overflow-y:auto; position:absolute; top:2vh; left:2vh; height:90vh; width:50vw;">
      <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
-    <script>
+    </div>
+       <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
       console.log(offset);
       
@@ -219,7 +221,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
           padding:1rem;
           height: 100vh;
           width: 100vw;
-          display:block;
+          display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
           background: linear-gradient(135deg, blue, red);
