--- a/public/historique.html
+++ b/public/historique.html
@@ -10,7 +10,7 @@
   </head>
   <body>
      <div id="toast-container"></div>
-    <div style="overflow-y:auto; position:absolute; top:2vh; left:2vh; height:90vh; width:50vw;">
+    <div style="border:2px solid white; overflow-y:auto; position:absolute; top:2vh; left:2vw; height:98vh; width:98vw;">
      <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
     </div>
        <script>
