--- a/public/historique.html
+++ b/public/historique.html
@@ -211,6 +211,12 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
 #tablehisto td {
   border: 1px solid black;
 }
+
+      #tablehisto th {
+        align-items:center;
+        margin:0 0;
+      }
+      
       /* tbody {
         overflow-y:auto;
         height:75%;
