--- a/public/historique.html
+++ b/public/historique.html
@@ -215,6 +215,7 @@ console.warn(`${jour}/${mois}/${annee} à ${heures}h${minutes}`);
       #tablehisto th {
         align-items:center;
         margin:0 0;
+        padding:0 0;
       }
       
       /* tbody {
