--- a/public/historique.html
+++ b/public/historique.html
@@ -102,6 +102,15 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
       bplug.addEventListener('input', resetTable);
       cplug.addEventListener('input', resetTable);
       dplug.addEventListener('input', resetTable);
+
+        const eplug = document.getElementById('iteminput');
+      const fplug = document.getElementById('typeinput');
+      const gplug = document.getElementById('carainput');
+      const hplug = document.getElementById('affecinput');
+      eplug.addEventListener('input', resetTable);
+      fplug.addEventListener('input', resetTable);
+      gplug.addEventListener('input', resetTable);
+      hplug.addEventListener('input', resetTable);
      
       async function resetTable () {
         clearTimeout(debounceTimer);
