--- a/public/historique.html
+++ b/public/historique.html
@@ -123,6 +123,10 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
           b:bplug.value,
           c:cplug.value,
           d:dplug.value,
+          e:eplug.value,
+          f:fplug.value,
+          g:gplug.value,
+          h:hplug.value,
           offset:offset
         };
         getHistorique(alltype, allid, query);
