--- a/public/historique.html
+++ b/public/historique.html
@@ -190,6 +190,9 @@ tabler.innerHTML = "<thead><tr><th>Date / Heure</th><th>Actionneur</th><th>Actio
         if (input == "2") {
           return "Déplacement";
         }
+        if (input == "3") {
+          return "Création";
+        }
       }
 
       function formatTimestamp(timestamp) {
