--- a/public/historique.html
+++ b/public/historique.html
@@ -12,7 +12,7 @@
      <div id="toast-container"></div>
     <div style="border:2px outset black; overflow-y:auto; position:absolute; top:1vh; left:1vw; height:98vh; width:98vw;">
      <table class="w3-center" style="width:100%; border:2px solid black; border-collapse:collapse; text-align:center;vertical-align:center;" id="tablehisto"></table>
-      <p id="result"></p>
+      <p class="w3-center" id="result"></p>
     </div>
        <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
