--- a/public/admin.html
+++ b/public/admin.html
@@ -1525,7 +1525,7 @@ comDatas[ben.id] = ben;
           const button = document.createElement('button');
           button.textContent = "Historique";
           button.addEventListener('click', () => {
-            window.open(`fleuread.onrender.com/historique?type=compte&id=${ben.num}`, '_blank');
+            window.open(`fleuread.onrender.com/historique?type=compte&id=${ben.id}`, '_blank');
           });
           line.append(button);
           const pds = document.createElement('p');
